Changed the title of the page
Learn more about Sebastian Bachmann

--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -149,7 +149,7 @@ button__secondary: #008000
 
   /*margin 0 auto centers my profile*/
   .profile {
-  max-width: 700px;
+  max-width: 900px;
   margin: 0 auto;
   }
 
@@ -169,16 +169,40 @@ button__secondary: #008000
   text-align: center;
   }
 
-  table {
+  .Skillset_table {
   background-color: #D3D3D3;
   color: undefined;
-  border: 2px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
   }
 
-  caption{
-  background-color: #D3D3D3;
-  color: undefined;
+  .Skillset_table thead tr {
+  background-color: #008000;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
   }
+
+  .Skillset_table th,
+  .Skillset_table td {
+  padding: 12px 15px;
+  text-align: left;
+  }
+
+  .Skillset_table tbody tr {
+  border-bottom: 1px solid #dddddd;
+  }
+
+  .Skillset_table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+  }
+
+  .Skillset_table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+  }
+
 
   /*applies for all a elements*/
   a:hover {
@@ -402,19 +426,19 @@ button__secondary: #008000
   }
 
   @media all and (max-width: 500px) {
-  .work__grid,.contact__grid {
+  .work__grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
 @media all and (min-width: 500px) and (max-width: 750px){
-  .work__grid,.contact__grid {
+  .work__grid{
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
 @media all and (max-width: 750px) {
-  .work__grid,.contact__grid {
+  .work__grid {
     grid-gap: 10px;
   }
   .workgrid_item,.contactgrid__item :last-child {
