--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -179,16 +179,40 @@ button__secondary: #008000
   text-align: center;
   }
 
-  table {
+  .Skillset_table {
   background-color: var(--background_color_workgrid__Contactme);
   color: var(--headline-2);
-  border: 2px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
   }
 
-  caption{
-  background-color: var(--background_color_workgrid__Contactme);
-  color: var(headline-color__h2);
+  .Skillset_table thead tr {
+  background-color: var(--button__normal);
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
   }
+
+  .Skillset_table th,
+  .Skillset_table td {
+  padding: 12px 15px;
+  text-align: left;
+  }
+
+  .Skillset_table tbody tr {
+  border-bottom: 1px solid #dddddd;
+  }
+
+  .Skillset_table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+  }
+
+  .Skillset_table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+  }
+
 
   /*applies for all a elements*/
   a:hover {
