--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -29,47 +29,19 @@ button__secondary: #008000
   */
 
 /* Color Variables*/
-  :root{
-  --background__color: #c0C0c0;
-  --headline-color__h1: #FF0000;
-  --headline-color__h2: #000000;
-  --buttonbackground__color: #008000;
-  --background_color_workgrid__Contactme: #D3D3D3;
-  --color_normal__button: #FFFFFF;
-}
  /* Font Variables */
-:root{
-  --font-size__normal: 16px;
-  --font-size__h1: 28px;
-  --font-size__h2: 22px;
-  --font-weight__normal: 400;
-  --font-weight__headlines: 700;
-}
 
 /* a Styling */
 
-:root{
---a__normal: #0000ff;
---a__visited: #800080;
---a__active: #FF0000;
-}
-
 /* button */
-
-:root {
---button__normal: #008000;
---button__no: #FF0000;
---button__visited: #800080;
---button__active:  #FF0000;
-}
 
 
   body {
-  background-color:  var(--background__color);
+  background-color:  #c0C0c0;
 
-  font-weight: var(--font-weight__normal);
+  font-weight: 400;
   font-family: 'Roboto', sans-serif;
-  font-size: var(--font-size__normal);
+  font-size: 16px;
   /* Sets the font size to 16px */
   line-height: 1.6;
   /* Sets the line-height to 1.6 */
@@ -93,7 +65,7 @@ button__secondary: #008000
   }
 
   .workgrid__item {
-  background-color: var(--background_color_workgrid__Contactme);
+  background-color: #D3D3D3;
   padding: 10px;
   }
 
@@ -113,18 +85,18 @@ button__secondary: #008000
 
 
   .contactgrid__item {
-  background-color: var(--background_color_workgrid__Contactme);
+  background-color: #D3D3D3;
   padding: 10px;
   text-align: left;
   }
 
   .Leavea__message {
-    font-size: var(--font-size__h2);
+    font-size: 22px;
     font-family: 'Hachi Maru Pop', cursive;
   }
 
   .contact__me {
-    font-size: var(--font-size__h2);
+    font-size: 22px;
     font-family: 'Hachi Maru Pop', cursive;
   }
 
@@ -182,24 +154,24 @@ button__secondary: #008000
   }
 
   h1 {
-  color: var(--headline-color__h1);
+  color: #FF0000;
   font-family: 'Hachi Maru Pop', cursive;
-  font-size: var(--font-size__h1);
+  font-size: 28px;
   font-weight: 700;
   text-align: center;
   }
 
   h2 {
-  color: var(headline-color__h2);
+  color: undefined;
   font-family: 'Roboto', cursive;
-  font-size: var(--font-size__h2);
+  font-size: 22px;
   font-weight: 700;
   text-align: center;
   }
 
   .Skillset_table {
-  background-color: var(--background_color_workgrid__Contactme);
-  color: var(--headline-2);
+  background-color: #D3D3D3;
+  color: undefined;
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -207,7 +179,7 @@ button__secondary: #008000
   }
 
   .Skillset_table thead tr {
-  background-color: var(--button__normal);
+  background-color: #008000;
   color: #ffffff;
   text-align: left;
   font-weight: bold;
@@ -239,7 +211,7 @@ button__secondary: #008000
 
   a:visited {
   /* visited link */
-  color: var(--a__visited);
+  color: #800080;
   }
 
   a:hover {
@@ -249,7 +221,7 @@ button__secondary: #008000
 
   a:active {
   /* active link */
-  color: var(--a__active)
+  color: #FF0000
   }
 
   button {
@@ -258,8 +230,8 @@ button__secondary: #008000
   /* takes the font from the outer container */
   font-family: inherit;
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
-  background-color: var(--button__normal);
-  color: var(--color_normal__button);
+  background-color: #008000;
+  color: #FFFFFF;
   text-decoration: none;
   /*adds spacing to the button (this will be discussed more in-depth later) */
   padding: 10px;
@@ -270,7 +242,7 @@ button__secondary: #008000
 
   button:visited {
   /* visited link */
-  color: var(--a__visited);
+  color: #800080;
   }
 
   button:hover, button:focus {
@@ -282,7 +254,7 @@ button__secondary: #008000
 
   button:active {
   /* active link */
-  color: var(--a__active);
+  color: #FF0000;
   }
 
   .contact {
@@ -291,14 +263,14 @@ button__secondary: #008000
 
   .button__no
   {
-  background-color: var(--button__no);
+  background-color: #FF0000;
   }
 
   .mainbody__aboutme{
     text-align: center;
   }
 
-  .button, button {
+  .button {
   /* overwrites browser defaults */
   /* resets the border */
   border: none;
@@ -306,7 +278,28 @@ button__secondary: #008000
   /* takes the font from the outer container */
   font-family: inherit;
   /* style button */
-  background-color: var(--button__normal);
+  background-color: #008000;
+  text-align: right;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  /* width of the border, type, color */
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.5s opacity;
+  -o-transition: 0.5s opacity;
+  transition: 0.5s opacity;
+  }
+
+  button {
+  /* overwrites browser defaults */
+  /* resets the border */
+  border: none;
+  display: inline-block;
+  /* takes the font from the outer container */
+  font-family: inherit;
+  /* style button */
+  background-color: #008000;
   text-align: right;
   color: white;
   text-decoration: none;
@@ -457,15 +450,6 @@ button__secondary: #008000
   }
 }
 
-#page-conatainer{
-  position: relative;
-  min-height: 100vh;
-}
-
-#content-wrap {
-  padding-bottom: 6rem;    /* Footer height */
-}
-
   .page-footer {
     clear: both;
     display: -webkit-box;
@@ -476,8 +460,4 @@ button__secondary: #008000
         -ms-flex-direction: column;
             flex-direction: column;
     text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 6rem;
   }
